fix: Adjust navigation icons to -15px when collapsed
- Changed margin-top from -14px to -15px
- Navigation icons now move up 15px total when sidebar is collapsed

--- a/src/components/layout/MainSidebar/MainSidebar.scss
+++ b/src/components/layout/MainSidebar/MainSidebar.scss
@@ -134,7 +134,7 @@
 
   // Ajustar posición de navegación cuando está colapsada
   &--collapsed &__nav {
-    margin-top: -14px;
+    margin-top: -15px;
   }
 
   &__secondary {
